# langly

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Makefile  README.md  agents.py  main.py  pyproject.toml  run.sh
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  base.py  coder_agent.py  pm_agent.py  router_agent.py  specialist_agents.py  workflow.py
app/api/: __init__.py  app.py
app/api/routes/: __init__.py  agents.py  agents_v2.py  chat.py  cleanup_v2.py  config_v2.py  dashboard_v2.py  diagnostics_v2.py  docs_v2.py  events_v2.py  events_v3.py  files_v2.py  harness_v2.py  health.py  health_v2.py  hitl_v2.py  hitl_v3.py  metrics_v2.py  models_v2.py  neo4j_v2.py  notes_v2.py  overview_v2.py  recent_v2.py  reset_v2.py  runs_v2.py  runs_v3.py  seed_v2.py  sessions_v2.py  snapshots_v2.py  status_v2.py  summary_v2.py  timeline_v2.py  tools_v2.py  tools_v3.py  websocket.py  workflows.py  workflows_v2.py  workflows_v3.py
app/core/: __init__.py  config.py  constants.py  exceptions.py  schemas.py
app/graphs/: __init__.py  checkpointer.py  edges.py  nodes.py  state.py  workflows.py
app/harness/: __init__.py  ab_test.py  cache.py  grader.py  graph.py  iteration.py  katas.py  model_routing.py  postprocess.py  prompt_enhancer.py  prompt_grader.py  reconfigure.py  recovery.py  research.py  scope.py  status.py  task_capture.py  tool_selection.py  tooling.py  trace.py  tuning.py
app/hitl/: __init__.py  approval.py  intervention.py  time_travel.py
app/llm/: __init__.py  embeddings.py  guardian.py  models.py  ollama_client.py  provider.py
app/memory/: __init__.py  neo4j_client.py  stores.py  zettelkasten.py
app/reliability/: __init__.py  circuit_breaker.py  graceful_degradation.py  health_checks.py  loop_detection.py
app/runtime/: __init__.py  circuit_breaker.py  engine.py  errors.py  events.py  hitl.py  llm.py  memory.py  models.py  neo4j_adapter.py  router.py  run_store.py  snapshot_store.py  state_store.py  summarizer.py
app/runtime/tools/: __init__.py  approval_tool.py  base.py  builtin.py  guardian.py  registry.py  service.py
app/tools/: __init__.py  api.py  base.py  filesystem.py  registry.py  sandbox.py
app/v3/: __init__.py  engine.py  events.py  graph.py  hitl.py  llm.py  models.py  nodes.py  registry.py  runtime.py  store.py
app/v3/tools/: __init__.py  base.py  builtin.py  registry.py
docs/: ARCHITECTURE_V2.md  ARCHITECTURE_V3.md  CHANGELOG.md  IO_EXAMPLES.md  OVERVIEW.md  REWRITE_PLAN_V3.md  REWRITE_TODO.md  TESTING_STRATEGY.md  V2_ENDPOINTS.md  V3_ENDPOINTS.md  memory-architecture.md
flask_ui/: app.py
flask_ui/static/: flask.css  flask.js
flask_ui/templates/: index.html
scripts/: harness_batch.py  harness_loop.sh  lint.sh  ollama_watch.sh  test.sh  v2_approval_flow.sh  v2_latest.sh  v2_ping.sh  v2_prune.sh  v2_run_and_approve.py  v2_seed_and_fetch.sh  v2_startup_check.sh
static/: api-client.js  git-tree.css  git-tree.js  harness.css  harness.js  index.html  interventions.html  panel-system.css  panel-system.js  tiling-manager.css  tiling-manager.js  tools.html
tests/: __init__.py  conftest.py  test_api.py  test_api_endpoints.py  test_core.py  test_hitl.py  test_reliability.py
tests/e2e/: __init__.py  test_full_workflows.py
tests/unit/: __init__.py  test_all_components.py  test_harness_policies.py  test_pydantic_schemas.py  test_task_capture.py
tests/v2/: test_tool_registry.py  test_v2_agents.py  test_v2_cleanup.py  test_v2_config.py  test_v2_config_reset.py  test_v2_diagnostics.py  test_v2_endpoints.py  test_v2_health.py  test_v2_health_ready_live.py  test_v2_integration.py  test_v2_metrics.py  test_v2_models.py  test_v2_neo4j.py  test_v2_overview.py  test_v2_runs.py  test_v2_session_clear.py  test_v2_session_summary.py  test_v2_sessions.py  test_v2_snapshots.py  test_v2_status.py  test_v2_store.py  test_v2_summary.py  test_v2_timeline.py  test_v2_tools.py
tests/v3/: test_v3_engine_tools.py  test_v3_hitl_resume.py  test_v3_registry.py  test_v3_store.py  test_v3_tools.py
