[project]
name = "langly"
version = "0.1.0"
description = "Multi-Agent Coding Platform with LangGraph and IBM Granite"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web framework - migrating from Flask to FastAPI
    "flask>=3.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.26",
    "websockets>=14.0",
    # LangChain ecosystem
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.0",
    # Configuration and validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Database
    "neo4j>=5.26.0",
    "aiosqlite>=0.20.0",
    # HTTP client
    "httpx>=0.28.0",
    # Reliability
    "tenacity>=9.0.0",
    "pybreaker>=1.2.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.5.0",
    "pytest-html>=4.1.0",
    "pytest-mock>=3.14.0",
    "hypothesis>=6.100.0",
    "respx>=0.21.0",
    # Type checking
    "mypy>=1.13.0",
    # Linting and formatting
    "ruff>=0.8.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    # Security scanning
    "bandit>=1.7.0",
    "safety>=3.0.0",
    # Pre-commit
    "pre-commit>=4.0.0",
    # Documentation
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ============================================================================
# RUFF - Fast Python linter and formatter
# ============================================================================
[tool.ruff]
line-length = 79
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    ".mypy_cache",
    ".pytest_cache",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "N",      # pep8-naming
    "D",      # pydocstyle
    "ASYNC",  # flake8-async
    "FA",     # flake8-future-annotations
    "RUF",    # Ruff-specific rules
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D203",   # 1 blank line required before class docstring
    "D213",   # Multi-line docstring summary should start at the second line
    "S101",   # Use of assert detected (OK in tests)
    "B008",   # Do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D103", "D100"]
"conftest.py" = ["D100", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = false
combine-as-imports = true

# ============================================================================
# BLACK - Code formatter
# ============================================================================
[tool.black]
line-length = 79
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | \.mypy_cache
  | \.pytest_cache
  | build
  | dist
)/
'''

# ============================================================================
# ISORT - Import sorting
# ============================================================================
[tool.isort]
profile = "black"
line_length = 79
known_first_party = ["app"]
skip = [".venv", "__pycache__"]
combine_as_imports = true

# ============================================================================
# MYPY - Static type checking
# ============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_error_context = true
pretty = true

# Per-module overrides for third-party libraries
[[tool.mypy.overrides]]
module = [
    "neo4j.*",
    "pybreaker.*",
    "langchain_core.*",
    "langchain_ollama.*",
    "langgraph.*",
    "tenacity.*",
    "respx.*",
    "hypothesis.*",
]
ignore_missing_imports = true

# ============================================================================
# PYTEST - Testing configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, may require external services)",
    "e2e: End-to-end tests (full workflow tests)",
    "slow: Slow tests (>5s)",
    "requires_ollama: Tests requiring Ollama server",
    "requires_neo4j: Tests requiring Neo4j database",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ============================================================================
# COVERAGE - Code coverage configuration
# ============================================================================
[tool.coverage.run]
source = ["app"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/.venv/*",
]

[tool.coverage.paths]
source = ["app"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "pass",
]
fail_under = 60
show_missing = true
skip_covered = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"
title = "Langly Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

# ============================================================================
# BANDIT - Security linting
# ============================================================================
[tool.bandit]
exclude_dirs = ["tests", ".venv", "__pycache__"]
skips = ["B101"]  # assert used for tests

# ============================================================================
# HYPOTHESIS - Property-based testing
# ============================================================================
[tool.hypothesis]
database = ".hypothesis"
